force-app/main/default/objects/OrderItem/fields/CWS_Actual_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Actual_Contract_Term__c</fullName>
    <description>Gets Actual Contract term from Order</description>
    <formula>Order.CWS_Actual_Contract_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>