force-app/main/default/objects/OrderItem/fields/CWS_ACV_QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>CWS_ACV_QuoteLine__c</fullName>
    <label>ACV_QuoteLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>