force-app/main/default/objects/OrderItem/fields/CWS_AvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>CWS_AvailableQuantity__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__PriorQuantity__c + SBQQ__OrderedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>