force-app/main/default/objects/OrderItem/fields/CWS_Avg_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>CWS_Avg_Number_of_Days__c</fullName>
    <description>Average Number of Days twin field from the Product. Denotes the average number of days for provisioning for Immediate provisioning</description>
    <label>Avg Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>