force-app/main/default/objects/OrderItem/fields/CWS_Billed_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billed_Till_Date__c</fullName>
    <label>Billed Till Date</label>
    <type>Date</type>
</CustomField>