force-app/main/default/objects/OrderItem/fields/CWS_BillingCyclesLeft__c.field-meta.xml
<CustomField>
    <fullName>CWS_BillingCyclesLeft__c</fullName>
    <description>The number of cycles left for billing</description>
    <label>Billing Cycles left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>