force-app/main/default/objects/OrderItem/fields/CWS_BillingEndDate__c.field-meta.xml
<CustomField>
    <fullName>CWS_BillingEndDate__c</fullName>
    <description>Billing End date for the subscription</description>
    <formula>IF(
	ISPICKVAL(CWS_Payment_Schedule_Driver__c,&apos;Spread&apos;),
IF(
	AND(
		NOT(
			ISBLANK(CWS_Period_for_Ramp_Spread_Deferment__c) 
			),
		CWS_Period_for_Ramp_Spread_Deferment__c&gt;0
	),
	ADDMONTHS(ServiceDate,  CWS_Period_for_Ramp_Spread_Deferment__c),
	ADDMONTHS(ServiceDate,1)),
  IF(            AND(  Product2.CWS_Implementation_Spread_Eligibility__c, 
                       OR(
                           NOT(ISPICKVAL(CWS_Payment_Schedule_Driver__c,&apos;Spread&apos;)), 
                                ISPICKVAL(CWS_Payment_Schedule_Driver__c,&apos;&apos;)
                          )
                     ),
                     ADDMONTHS(ServiceDate,1),
                     EndDate 
    )
)</formula>
    <label>Billing End Date</label>
    <type>Date</type>
</CustomField>