force-app/main/default/objects/OrderItem/fields/CWS_Calculated_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Calculated_Subscription_Term__c</fullName>
    <description>This field can be used if Subscription Term is blank</description>
    <formula>IF(ISBLANK(SBQQ__SubscriptionTerm__c), SBQQ__QuoteLine__r.CWS_Calculated_Subscription_Term__c, SBQQ__SubscriptionTerm__c)</formula>
    <inlineHelpText>Refer this field if Subscription Term is blank.</inlineHelpText>
    <label>Calculated Subscription Term</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>