force-app/main/default/objects/OrderItem/fields/CWS_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Category__c</fullName>
    <description>Category information twinned from the Quote line</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Category</valueSetName>
    </valueSet>
</CustomField>