force-app/main/default/objects/OrderItem/fields/CWS_Convenience_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Convenience_Expiration_Date__c</fullName>
    <inlineHelpText>Twins over from Quote line to support termination for convenience automation</inlineHelpText>
    <label>Convenience Expiration Date</label>
    <type>Date</type>
</CustomField>