force-app/main/default/objects/OrderItem/fields/CWS_Convenience_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Convenience_Term__c</fullName>
    <inlineHelpText>Twins over from Quote line to support termination for convenience automation</inlineHelpText>
    <label>Convenience Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>