force-app/main/default/objects/OrderItem/fields/CWS_Economic_Factor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Economic_Factor__c</fullName>
    <description>Economic factor field copied from the Quote line</description>
    <label>Economic Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>