force-app/main/default/objects/OrderItem/fields/CWS_Exchange_Factor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exchange_Factor__c</fullName>
    <description>Exchange factor copied from the Quote line as a twin field</description>
    <label>Exchange Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>