force-app/main/default/objects/OrderItem/fields/CWS_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exchange_Rate__c</fullName>
    <description>Exchange Rate copied from the Quote line as a twin field</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>