force-app/main/default/objects/OrderItem/fields/CWS_Exclude_from_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Exclude_from_Net_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify the quotelines/options which needs to be excluded from the Pricing Calculation by making the NetPrice/Nettotal as 0. But the Customer Price value will reflect in the Order form.</description>
    <inlineHelpText>This field is used to identify the quotelines/options which needs to be excluded from the Pricing Calculation by making the NetPrice/Nettotal as 0. But the Customer Price value will reflect in the Order form.</inlineHelpText>
    <label>Exclude from Net Total</label>
    <type>Checkbox</type>
</CustomField>