force-app/main/default/objects/OrderItem/fields/CWS_Included_Units__c.field-meta.xml
<CustomField>
    <fullName>CWS_Included_Units__c</fullName>
    <label>Free Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>