force-app/main/default/objects/OrderItem/fields/CWS_IsProrate__c.field-meta.xml
<CustomField>
    <fullName>CWS_IsProrate__c</fullName>
    <description>Denotes if  the line is prorated in downstream systems</description>
    <formula>If(AND(DAY(ServiceDate)&lt;&gt;1, OR( ISBLANK(CWS_Bill_Cycle_Type__c ), CWS_Bill_Cycle_Type__c =&apos;DefaultFromCustomer&apos;)), 
NOT(AND(ISPICKVAL(SBQQ__ChargeType__c,&apos;One-Time&apos;), NOT(ISPICKVAL( CWS_Payment_Schedule_Driver__c ,&apos;Spread&apos;)) ) ),
False
)</formula>
    <inlineHelpText>Denotes if  the line is prorated in downstream systems</inlineHelpText>
    <label>Prorate?</label>
    <type>Checkbox</type>
</CustomField>