force-app/main/default/objects/OrderItem/fields/CWS_Legacy_Rate_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Rate_Plan_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Rate Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>