force-app/main/default/objects/OrderItem/fields/CWS_LegacyKey__c.field-meta.xml
<CustomField>
    <fullName>CWS_LegacyKey__c</fullName>
    <description>Legacy Key copied from the related quote line</description>
    <label>Legacy Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>