force-app/main/default/objects/OrderItem/fields/CWS_ListTotal__c.field-meta.xml
<CustomField>
    <fullName>CWS_ListTotal__c</fullName>
    <description>List total copied from the Quote line</description>
    <label>List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>