force-app/main/default/objects/OrderItem/fields/CWS_Lost_Value__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lost_Value__c</fullName>
    <description>Field to store the difference in case of Uneven spread values.(Only for backend calculation)</description>
    <label>Lost Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>