force-app/main/default/objects/OrderItem/fields/CWS_ManageOpportunityProductId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ManageOpportunityProductId__c</fullName>
    <description>Manage Opportunity Product Id</description>
    <inlineHelpText>Manage Opportunity Product Id</inlineHelpText>
    <label>Manage Opportunity Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>