force-app/main/default/objects/OrderItem/fields/CWS_Min_Commit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Min_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Min Qty Commitment for the Usage products. Value will come from Quote Line</description>
    <inlineHelpText>Min Qty Commitment for the Usage products. Value will come from Quote Line</inlineHelpText>
    <label>Min Commit</label>
    <type>Checkbox</type>
</CustomField>