force-app/main/default/objects/OrderItem/fields/CWS_Month_to_Month__c.field-meta.xml
<CustomField>
    <fullName>CWS_Month_to_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE= If Partner does not want to agree for term commitment and will require flexibility to cancel anytime, then indicate on the cart checkbox</description>
    <inlineHelpText>TRUE= If Partner does not want to agree for term commitment and will require flexibility to cancel anytime, then indicate on the cart checkbox</inlineHelpText>
    <label>Month-to-Month</label>
    <type>Checkbox</type>
</CustomField>