force-app/main/default/objects/OrderItem/fields/CWS_NetTotal__c.field-meta.xml
<CustomField>
    <fullName>CWS_NetTotal__c</fullName>
    <description>Net Total value from the quote line</description>
    <inlineHelpText>Net Total value from the quote line</inlineHelpText>
    <label>Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>