force-app/main/default/objects/OrderItem/fields/CWS_NSQuantity__c.field-meta.xml
<CustomField>
    <fullName>CWS_NSQuantity__c</fullName>
    <formula>(IF(ISPICKVAL(SBQQ__QuoteLine__r.SBQQ__Product__r.CWS_ChargeType__c,&quot;Recurring&quot;),CWS_Calculated_Subscription_Term__c,1)*SBQQ__OrderedQuantity__c)/
CASE(CWS_Billing_Term__c,
&quot;Annual&quot;,12,
&quot;Bi-Annual&quot;,24,
&quot;Monthly&quot;,1,
&quot;One-Time&quot;,1,
&quot;Quarterly&quot;,3,
&quot;Semi-Annual&quot;,6,
&quot;Tri-Annual&quot;,36,
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>