force-app/main/default/objects/OrderItem/fields/CWS_OF_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_OF_Signed_Date__c</fullName>
    <description>Gets the OrderSigned date from Order</description>
    <formula>Order.CWS_OF_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OF Signed Date</label>
    <type>Date</type>
</CustomField>