force-app/main/default/objects/OrderItem/fields/CWS_Original_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Original_Line_Number__c</fullName>
    <formula>SBQQ__RevisedOrderProduct__r.OrderItemNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Line Number</label>
    <type>Text</type>
</CustomField>