force-app/main/default/objects/OrderItem/fields/CWS_Original_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Original_Order_Quantity__c</fullName>
    <description>Quantity of the original order product</description>
    <formula>SBQQ__RevisedOrderProduct__r.SBQQ__OrderedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>