force-app/main/default/objects/OrderItem/fields/CWS_OriginalOrderSortNumber__c.field-meta.xml
<CustomField>
    <fullName>CWS_OriginalOrderSortNumber__c</fullName>
    <description>Used for sorting logic in the middleware (Boomi). Denotes the required by Order Item number if its an option, else shows the revised order item number</description>
    <formula>IF(iSBLANK(SBQQ__RevisedOrderProduct__r.SBQQ__RequiredBy__c ), SBQQ__RevisedOrderProduct__r.OrderItemNumber, SBQQ__RevisedOrderProduct__r.SBQQ__RequiredBy__r.OrderItemNumber)</formula>
    <label>Original Order Sort Number</label>
    <type>Text</type>
</CustomField>