force-app/main/default/objects/OrderItem/fields/CWS_Overage_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Overage_Price__c</fullName>
    <description>Overage Price per billing period</description>
    <formula>SBQQ__QuoteLine__r.CWS_Overage_Price__c</formula>
    <label>Overage Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>