force-app/main/default/objects/OrderItem/fields/CWS_Payment_Schedule_Driver__c.field-meta.xml
<CustomField>
    <fullName>CWS_Payment_Schedule_Driver__c</fullName>
    <description>Payment schedule Driver is copied from the Quote line</description>
    <label>Payment Schedule Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Payment_Schedule_Driver</valueSetName>
    </valueSet>
</CustomField>