force-app/main/default/objects/OrderItem/fields/CWS_Period_for_Ramp_Spread_Deferment__c.field-meta.xml
<CustomField>
    <fullName>CWS_Period_for_Ramp_Spread_Deferment__c</fullName>
    <description>Twin field to populate information from Quote lines</description>
    <label>Period for Ramp/Spread/Deferment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>