force-app/main/default/objects/OrderItem/fields/CWS_Price_For_Last_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Price_For_Last_Billing_Period__c</fullName>
    <label>Price For Last Billing Period</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>