force-app/main/default/objects/OrderItem/fields/CWS_Price_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>CWS_Price_Increase_Percent__c</fullName>
    <description>Renewal Price Increase % information from Quote Line.</description>
    <inlineHelpText>Renewal Price Increase % information from Quote Line.</inlineHelpText>
    <label>Price Increase (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>