force-app/main/default/objects/OrderItem/fields/CWS_Price_Per_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>CWS_Price_Per_Billing_Period__c</fullName>
    <inlineHelpText>From the total price of the line, the amount that needs to be charged per billing frequency</inlineHelpText>
    <label>Unit Price Per Billing Period</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>