force-app/main/default/objects/OrderItem/fields/CWS_price_per_billing_period_ff__c.field-meta.xml
<CustomField>
    <fullName>CWS_price_per_billing_period_ff__c</fullName>
    <description>Unit price per billing period value expanded to 6 decimal places in the Quote/Order currency</description>
    <formula>CWS_Price_Per_Billing_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit price per billing period value expanded to 6 decimal places in the Quote/Order currency</inlineHelpText>
    <label>Unit Price Per Billing Period</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>