force-app/main/default/objects/OrderItem/fields/CWS_PriceAdjustmentDate__c.field-meta.xml
<CustomField>
    <fullName>CWS_PriceAdjustmentDate__c</fullName>
    <description>Price adjustment Date for the last billing period in case of ProRation</description>
    <label>Price Adjustment Date</label>
    <type>Date</type>
</CustomField>