force-app/main/default/objects/OrderItem/fields/CWS_Prior_Discount_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prior_Discount_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will be populated for Renewal Quotes with value equal to Prior Quote&apos;s Discount Schedule</description>
    <label>Prior Discount Schedule</label>
    <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
    <relationshipLabel>Order Item (Prior Discount Schedule)</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>