force-app/main/default/objects/OrderItem/fields/CWS_Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Brand__c</fullName>
    <description>Captures the Brand name of the related product</description>
    <formula>Product2.CWS_Brand_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWS Product Brand</label>
    <type>Text</type>
</CustomField>