force-app/main/default/objects/OrderItem/fields/CWS_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Description__c</fullName>
    <label>Invoice Line Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>