force-app/main/default/objects/OrderItem/fields/CWS_Product_Source__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Source__c</fullName>
    <description>To identify CW vs CMS vs R1Soft Products</description>
    <formula>TEXT(Product2.CWS_Source__c)</formula>
    <inlineHelpText>To identify CW vs CMS vs R1Soft Products</inlineHelpText>
    <label>Product Source</label>
    <type>Text</type>
</CustomField>