force-app/main/default/objects/OrderItem/fields/CWS_ProratedListPrice__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProratedListPrice__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__ProratedPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>