force-app/main/default/objects/OrderItem/fields/CWS_Provisioning_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CWS_Provisioning_Eligibility__c</fullName>
    <description>Provisioning Eligibility twin field from Product and quote line</description>
    <label>Provisioning Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Provisioning_Eligibility</valueSetName>
    </valueSet>
</CustomField>