force-app/main/default/objects/OrderItem/fields/CWS_ProvisioningDate__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProvisioningDate__c</fullName>
    <description>Provisioning date to be populated by the order management team</description>
    <inlineHelpText>Provisioning date to be populated by the order management team</inlineHelpText>
    <label>Provisioning Date</label>
    <type>Date</type>
</CustomField>