force-app/main/default/objects/OrderItem/fields/CWS_Refund__c.field-meta.xml
<CustomField>
    <fullName>CWS_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an amount should be refunded/negated for the cancellation/downgrade of One-time products</description>
    <inlineHelpText>Indicates if an amount should be refunded/negated for the cancellation/downgrade of One-time products</inlineHelpText>
    <label>Refund</label>
    <type>Checkbox</type>
</CustomField>