force-app/main/default/objects/OrderItem/fields/CWS_Regular_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Regular_Total__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__RegularTotal__c</formula>
    <inlineHelpText>This price is sent to Netsuite</inlineHelpText>
    <label>Regular Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>