force-app/main/default/objects/OrderItem/fields/CWS_Regular_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Regular_Unit_Price__c</fullName>
    <formula>CASE( Order.CWS_Route_to_Market__c , 
      &apos;IIT&apos;,  SBQQ__QuoteLine__r.CWS_MM_ListPrice__c , 
       &apos;Channel&apos;, SBQQ__QuoteLine__r.CWS_Disti_Regular_Price__c,
         SBQQ__QuoteLine__r.CWS_RegularPrice__c )</formula>
    <label>Regular Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>