force-app/main/default/objects/OrderItem/fields/CWS_RegularTotal__c.field-meta.xml
<CustomField>
    <fullName>CWS_RegularTotal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Regular Total value from the quote line</description>
    <inlineHelpText>The Regular Total value from the quote line</inlineHelpText>
    <label>Regular total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>