force-app/main/default/objects/OrderItem/fields/CWS_RegularUnit_Price_per_billing_period__c.field-meta.xml
<CustomField>
    <fullName>CWS_RegularUnit_Price_per_billing_period__c</fullName>
    <label>Regular Unit Price per billing period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>