force-app/main/default/objects/OrderItem/fields/CWS_Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Uplift__c</fullName>
    <description>Renewal Uplift (%) from the twin field from Quote line</description>
    <inlineHelpText>Renewal Uplift (%) from the twin field from Quote line</inlineHelpText>
    <label>Renewal Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>