force-app/main/default/objects/OrderItem/fields/CWS_ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>CWS_ServiceDate__c</fullName>
    <description>Cancellation Effective Date which is populated as the Revised Order Product&apos;s Start date if the Refund = TRUE and Contract Action = Cancel for One Time products</description>
    <formula>IF(
    AND(
        SBQQ__QuoteLine__r.CWS_Refund__c,
        ISPICKVAL(SBQQ__ContractAction__c,&apos;Cancel&apos;),
        ISPICKVAl(Product2.CWS_ChargeType__c, &apos;One-Time&apos;)
        ),
        SBQQ__RevisedOrderProduct__r.ServiceDate,
        ServiceDate
)</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>