force-app/main/default/objects/OrderItem/fields/CWS_ServicesProvisioned__c.field-meta.xml
<CustomField>
    <fullName>CWS_ServicesProvisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services Provisioned</label>
    <type>Checkbox</type>
</CustomField>