force-app/main/default/objects/OrderItem/fields/CWS_SKU_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_SKU_Type__c</fullName>
    <label>SKU Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_SKU_TYPE</valueSetName>
    </valueSet>
</CustomField>