force-app/main/default/objects/OrderItem/fields/CWS_Sort_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sort_Order_Product__c</fullName>
    <formula>If(ISBLANK(SBQQ__RequiredBy__c),(OrderItemNumber), SBQQ__RequiredBy__r.OrderItemNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Order Product</label>
    <type>Text</type>
</CustomField>