force-app/main/default/objects/OrderItem/fields/CWS_Special_Price__c.field-meta.xml
<CustomField>
    <fullName>CWS_Special_Price__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__SpecialPrice__c</formula>
    <label>Special Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>