force-app/main/default/objects/OrderItem/fields/CWS_Split_Order__c.field-meta.xml
<CustomField>
    <fullName>CWS_Split_Order__c</fullName>
    <description>Capture whether Product is Evergreen or not</description>
    <label>Split Order</label>
    <length>18</length>
    <type>Text</type>
</CustomField>