force-app/main/default/objects/OrderItem/fields/CWS_TCV__c.field-meta.xml
<CustomField>
    <fullName>CWS_TCV__c</fullName>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>