force-app/main/default/objects/OrderItem/fields/CWS_Termination_for_Convenience__c.field-meta.xml
<CustomField>
    <fullName>CWS_Termination_for_Convenience__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Twins over from Quote line to support termination for convenience automation</inlineHelpText>
    <label>Termination for Convenience</label>
    <type>Checkbox</type>
</CustomField>