force-app/main/default/objects/OrderItem/fields/CWS_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Transaction_Type__c</fullName>
    <description>Twin field information copied from Quote line</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Transaction_Type</valueSetName>
    </valueSet>
</CustomField>