force-app/main/default/objects/OrderItem/fields/CWS_Un_billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Un_billed_Amount__c</fullName>
    <label>Un-billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>