force-app/main/default/objects/OrderItem/fields/CWS_Uneven_Spread__c.field-meta.xml
<CustomField>
    <fullName>CWS_Uneven_Spread__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the line has uneven spread or not</description>
    <inlineHelpText>Check if the line has uneven spread or not</inlineHelpText>
    <label>Uneven Spread</label>
    <type>Checkbox</type>
</CustomField>