force-app/main/default/objects/OrderItem/fields/CWS_Uneven_Spread_Values__c.field-meta.xml
<CustomField>
    <fullName>CWS_Uneven_Spread_Values__c</fullName>
    <description>Used to specify the no of Spread Entry when Uneven Spread is selected.</description>
    <inlineHelpText>This indicates the price points to be used in case of an uneven spread. Values are semi-colon separated.</inlineHelpText>
    <label>Uneven Spread Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>