force-app/main/default/objects/OrderItem/fields/CWS_UnitPriceDiscount__c.field-meta.xml
<CustomField>
    <fullName>CWS_UnitPriceDiscount__c</fullName>
    <formula>SBQQ__QuotedListPrice__c-UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>