force-app/main/default/objects/OrderItem/fields/CWS_Uplift__c.field-meta.xml
<CustomField>
    <fullName>CWS_Uplift__c</fullName>
    <formula>IF(ISBLANK(SBQQ__QuoteLine__r.SBQQ__Uplift__c),
SBQQ__QuoteLine__r.SBQQ__Quote__r.SBQQ__RenewalUpliftRate__c,
SBQQ__QuoteLine__r.SBQQ__Uplift__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uplift (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>