force-app/main/default/objects/OrderItem/fields/CWS_Usage_Ramp_Qty__c.field-meta.xml
<CustomField>
    <fullName>CWS_Usage_Ramp_Qty__c</fullName>
    <formula>if( NOT(ISBLANK( SBQQ__QuoteLine__r.CWS_Usage_Ramp_Qty__c)),  SBQQ__QuoteLine__r.CWS_Usage_Ramp_Qty__c + &quot;;&quot;+ TEXT(Quantity ) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Ramp Qty</label>
    <type>Text</type>
</CustomField>