force-app/main/default/objects/OrderItem/fields/CWS_UserDefinedScheduleId__c.field-meta.xml
<CustomField>
    <fullName>CWS_UserDefinedScheduleId__c</fullName>
    <formula>IF(SBQQ__QuoteLine__r.CWS_Renewed_Line__c=true,
IF(SBQQ__QuoteLine__r.CWS_Prior_Discount_Schedule__r.SBQQ__UserDefined__c=true,
SBQQ__QuoteLine__r.CWS_Prior_Discount_Schedule__c,
null),
if(SBQQ__QuoteLine__r.SBQQ__DiscountSchedule__r.SBQQ__UserDefined__c=true, 
SBQQ__QuoteLine__r.SBQQ__DiscountSchedule__c,
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserDefinedScheduleId</label>
    <type>Text</type>
</CustomField>