force-app/main/default/objects/OrderItem/fields/CWS_Vendor_Part__c.field-meta.xml
<CustomField>
    <fullName>CWS_Vendor_Part__c</fullName>
    <formula>Product2.CWS_NetSuite_Internal_Id__c &amp; &apos;-&apos; &amp; TEXT(Product2.CWS_Source__c) &amp; &apos;-&apos; &amp; TEXT( CurrencyIsoCode )&amp; &apos;-&apos; &amp; LEFT(TEXT( SBQQ__QuoteLine__r.SBQQ__Quote__r.CWS_Route_to_Market__c),1) &amp; &apos;-&apos; &amp; LEFT(TEXT(CWS_Billing_Term__c ),1) &amp; &apos;-&apos; &amp; TEXT (SBQQ__QuoteLine__r.SBQQ__DiscountTier__r.SBQQ__Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Part #</label>
    <type>Text</type>
</CustomField>