force-app/main/default/objects/OrderItem/fields/CWS_Zuora_Subscription_RPC_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Zuora_Subscription_RPC_Number__c</fullName>
    <description>Zuora Subscription Rate Plan Charge Number</description>
    <inlineHelpText>Zuora Subscription Rate Plan Charge Number</inlineHelpText>
    <label>Zuora Subscription RPC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>